v1.0.0/modules/schema/pages/class/TapChangerTablePoint.adoc
= `TapChangerTablePoint`
:toclevels: 4


+++Describes each tap step in the tabular curve.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TapChangerTablePoint`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* *`TapChangerTablePoint`*
 ** xref::class/PhaseTapChangerTablePoint.adoc[`PhaseTapChangerTablePoint`]
 ** xref::class/RatioTapChangerTablePoint.adoc[`RatioTapChangerTablePoint`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TapChangerTablePoint {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}
















legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<b,`b`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++The magnetizing branch susceptance deviation as a percentage of nominal value. The actual susceptance is calculated as follows:
calculated magnetizing susceptance = b(nominal) * (1 + b(from this class)/100).   The b(nominal) is defined as the static magnetizing susceptance on the associated power transformer end or ends.  This model assumes the star impedance (pi model) form.+++

| <<g,`g`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++The magnetizing branch conductance deviation as a percentage of nominal value. The actual conductance is calculated as follows:
calculated magnetizing conductance = g(nominal) * (1 + g(from this class)/100).   The g(nominal) is defined as the static magnetizing conductance on the associated power transformer end or ends.  This model assumes the star impedance (pi model) form.+++

| <<r,`r`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++The resistance deviation as a percentage of nominal value. The actual reactance is calculated as follows:
calculated resistance = r(nominal) * (1 + r(from this class)/100).   The r(nominal) is defined as the static resistance on the associated power transformer end or ends.  This model assumes the star impedance (pi model) form.+++

| <<ratio,`ratio`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The voltage at the tap step divided by rated voltage of the transformer end having the tap changer. Hence this is a value close to one.
For example, if the ratio at step 1 is 1.01, and the rated voltage of the transformer end is 110kV, then the voltage obtained by setting the tap changer to step 1 to is 111.1kV.+++

| <<step,`step`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++The tap step.+++

| <<x,`x`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++The series reactance deviation as a percentage of nominal value. The actual reactance is calculated as follows:
calculated reactance = x(nominal) * (1 + x(from this class)/100).   The x(nominal) is defined as the static series reactance on the associated power transformer end or ends.  This model assumes the star impedance (pi model) form.+++
|===

'''


//[discrete]
[#b]
=== `b`
+++The magnetizing branch susceptance deviation as a percentage of nominal value. The actual susceptance is calculated as follows:
calculated magnetizing susceptance = b(nominal) * (1 + b(from this class)/100).   The b(nominal) is defined as the static magnetizing susceptance on the associated power transformer end or ends.  This model assumes the star impedance (pi model) form.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TapChangerTablePoint.b`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#g]
=== `g`
+++The magnetizing branch conductance deviation as a percentage of nominal value. The actual conductance is calculated as follows:
calculated magnetizing conductance = g(nominal) * (1 + g(from this class)/100).   The g(nominal) is defined as the static magnetizing conductance on the associated power transformer end or ends.  This model assumes the star impedance (pi model) form.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TapChangerTablePoint.g`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#r]
=== `r`
+++The resistance deviation as a percentage of nominal value. The actual reactance is calculated as follows:
calculated resistance = r(nominal) * (1 + r(from this class)/100).   The r(nominal) is defined as the static resistance on the associated power transformer end or ends.  This model assumes the star impedance (pi model) form.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TapChangerTablePoint.r`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#ratio]
=== `ratio`
+++The voltage at the tap step divided by rated voltage of the transformer end having the tap changer. Hence this is a value close to one.
For example, if the ratio at step 1 is 1.01, and the rated voltage of the transformer end is 110kV, then the voltage obtained by setting the tap changer to step 1 to is 111.1kV.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TapChangerTablePoint.ratio`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#step]
=== `step`
+++The tap step.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TapChangerTablePoint.step`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#x]
=== `x`
+++The series reactance deviation as a percentage of nominal value. The actual reactance is calculated as follows:
calculated reactance = x(nominal) * (1 + x(from this class)/100).   The x(nominal) is defined as the static series reactance on the associated power transformer end or ends.  This model assumes the star impedance (pi model) form.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TapChangerTablePoint.x`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===


